--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-query-next-experimental": "^5.91.0",
+    "@types/cookie": "^0.6.0",
     "axios": "^1.13.5",
+    "cookie": "^1.1.1",
     "formik": "^2.4.9",
     "next": "16.1.6",
     "react": "19.2.3",
